modify some rule
